tests/tooling/fixtures/native/execution/positive/message_send_nil_alias_identifier_elision.objc3
// Positive execution fixture: nil-provenance alias identifier receiver elides runtime dispatch.
module MessageSendNilAliasIdentifierElisionExecution;

fn main() {
  let receiver = nil;
  let alias = receiver;
  let sent = [alias ping];
  return sent + 21;
}
